--- a/webpages/notification_center.html
+++ b/webpages/notification_center.html
@@ -1166,8 +1166,13 @@
         </div>
         <ul class="sidebar-menu">
             <li class="sidebar-item">
-                <a href="#" class="sidebar-link">
-                    <i class="fas fa-road"></i> My Roadmap
+                <a href="dashboard.html" class="sidebar-link">
+                    <i class="fas fa-home"></i> Overview
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a href="academic_profile.html" class="sidebar-link">
+                    <i class="fas fa-graduation-cap"></i> Academic Profile
                 </a>
             </li>
             <li class="sidebar-item">
@@ -1178,6 +1183,11 @@
             <li class="sidebar-item">
                 <a href="recommendation.html" class="sidebar-link">
                     <i class="fas fa-lightbulb"></i> Recommendations
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a href="saved_items.html" class="sidebar-link">
+                    <i class="fas fa-bookmark"></i> Saved Items
                 </a>
             </li>
         </ul>
@@ -1191,6 +1201,7 @@
             <ul class="sidebar-menu">
                 <li class="sidebar-item"><a href="dashboard.html" class="sidebar-link"><i class="fas fa-home"></i> Overview</a></li>
                 <li class="sidebar-item"><a href="academic_profile.html" class="sidebar-link"><i class="fas fa-graduation-cap"></i> Academic Profile</a></li>
+                <li class="sidebar-item"><a href="upcoming_deadline.html" class="sidebar-link"><i class="fas fa-calendar-alt"></i> Upcoming Deadlines</a></li>
                 <li class="sidebar-item"><a href="recommendation.html" class="sidebar-link"><i class="fas fa-lightbulb"></i> Recommendations</a></li>
                 <li class="sidebar-item"><a href="saved_items.html" class="sidebar-link"><i class="fas fa-bookmark"></i> Saved Items</a></li>
             </ul>
@@ -1883,6 +1894,4 @@
         filterNotifications();
     </script>
 </body>
-
 </html>
-
