--- a/webpages/academic_profile.html
+++ b/webpages/academic_profile.html
@@ -952,7 +952,6 @@
                 <li class="nav-item"><a href="dashboard.html" class="nav-link">Dashboard</a></li>
                 <li class="nav-item"><a href="roadmaps.html" class="nav-link">Roadmaps</a></li>
                 <li class="nav-item"><a href="recommendation.html" class="nav-link">Recommendations</a></li>
-                <li class="nav-item"><a href="progress.html" class="nav-link">Progress</a></li>
                 <li class="nav-item"><a href="support.html" class="nav-link">Support</a></li>
             </ul>
             
@@ -1008,8 +1007,13 @@
         </div>
         <ul class="sidebar-menu">
             <li class="sidebar-item">
-                <a href="#" class="sidebar-link">
-                    <i class="fas fa-road"></i> My Roadmap
+                <a href="dashboard.html" class="sidebar-link">
+                    <i class="fas fa-home"></i> Overview
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a href="academic_profile.html" class="sidebar-link">
+                    <i class="fas fa-graduation-cap"></i> Academic Profile
                 </a>
             </li>
             <li class="sidebar-item">
@@ -1023,8 +1027,8 @@
                 </a>
             </li>
             <li class="sidebar-item">
-                <a href="#" class="sidebar-link">
-                    <i class="fas fa-book-open"></i> Resource Library
+                <a href="saved_items.html" class="sidebar-link">
+                    <i class="fas fa-bookmark"></i> Saved Items
                 </a>
             </li>
         </ul>
@@ -1040,8 +1044,8 @@
             <ul class="sidebar-menu">
                 <li class="sidebar-item"><a href="dashboard.html" class="sidebar-link"><i class="fas fa-home"></i> Overview</a></li>
                 <li class="sidebar-item"><a href="academic_profile.html" class="sidebar-link active"><i class="fas fa-graduation-cap"></i> Academic Profile</a></li>
-                <li class="sidebar-item"><a href="recommendation.html" class="sidebar-link"><i class="fas fa-lightbulb"></i> Recommendations</a></li>
                 <li class="sidebar-item"><a href="upcoming_deadline.html" class="sidebar-link"><i class="fas fa-calendar-alt"></i> Upcoming Deadlines</a></li>
+                <li class="sidebar-item"><a href="recommendation.html" class="sidebar-link"><i class="fas fa-lightbulb"></i> Recommendations</a></li>
                 <li class="sidebar-item"><a href="saved_items.html" class="sidebar-link"><i class="fas fa-bookmark"></i> Saved Items</a></li>
             </ul>
         </aside>
