--- a/webpages/academic_profile.html
+++ b/webpages/academic_profile.html
@@ -1008,7 +1008,7 @@
         <ul class="sidebar-menu">
             <li class="sidebar-item">
                 <a href="dashboard.html" class="sidebar-link">
-                    <i class="fas fa-home"></i> Overview
+                    <i class="fas fa-"></i> Overview
                 </a>
             </li>
             <li class="sidebar-item">
@@ -1306,11 +1306,11 @@
             <div class="footer-column">
                 <h4 class="footer-heading">Quick Links</h4>
                 <ul class="footer-links">
-                    <li class="footer-link"><a href="#">About Us</a></li>
-                    <li class="footer-link"><a href="#">Our Services</a></li>
-                    <li class="footer-link"><a href="#">How It Works</a></li>
-                    <li class="footer-link"><a href="#">Testimonials</a></li>
-                    <li class="footer-link"><a href="#">Careers</a></li>
+                    <li class="footer-link"><a href="landing_page.html">About Us</a></li>
+                    <li class="footer-link"><a href="landing_page.html">Our Services</a></li>
+                    <li class="footer-link"><a href="landing_page.html">How It Works</a></li>
+                    <li class="footer-link"><a href="landing_page.html">Testimonials</a></li>
+                    <li class="footer-link"><a href="roadmaps.html">Careers</a></li>
                 </ul>
             </div>
             
