--- a/webpages/academic_profile.html
+++ b/webpages/academic_profile.html
@@ -1008,7 +1008,7 @@
         <ul class="sidebar-menu">
             <li class="sidebar-item">
                 <a href="dashboard.html" class="sidebar-link">
-                    <i class="fas fa-"></i> Overview
+                    <i class="fas fa-home"></i> Overview
                 </a>
             </li>
             <li class="sidebar-item">
