--- a/webpages/recommendation.html
+++ b/webpages/recommendation.html
@@ -1006,6 +1006,7 @@
                 <div class="user-profile">
                     <div class="user-avatar">AS</div>
                     <div class="user-name">Anjali S.</div>
+                    <i class="fas fa-chevron-down"></i>
                     <div class="user-dropdown">
                         <a href="academic_profile.html" class="dropdown-item"><i class="fas fa-user"></i> Profile</a>
                         <a href="prefrences_settings.html" class="dropdown-item"><i class="fas fa-cog"></i> Settings</a>
@@ -1625,4 +1626,5 @@
     </script>
 </body>
 </html>
+
 
